frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-static-site
  template:
    metadata:
      labels:
        app: nginx-static-site
    spec:
      containers:
      - name: nginx-static-site
        image: fansari9993/test9:v9
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "500m"
          limits:
            cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-site-service
spec:
  selector:
    app: nginx-static-site
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30001
  type: NodePort
